# retinal_disease_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
analysis/failures/: summary.md
scripts/: failure_analysis.py
src/: api.py  config.py  dataset.py  evaluate.py  model.py  train.py
tests/: test_clahe.py  test_model.py  test_thresholds.py
